# extrajob

ogre_tutorial/: .gitignore  CMakeLists.txt  application.cpp  application.h  baseapp.cpp  ogre_tutorial_1.cpp  ogre_tutorial_2.cpp  plugins.cfg  resources-1.9.cfg  resources.cfg  tutorial_1.cpp  tutorial_2.cpp  tutorial_3.cpp  tutorial_4.cpp  tutorial_5.cpp
ogre_tutorial/material/script/: casino_wheel.material
ogre_tutorial/material/src/: casino_while.odg
test/: CMakeLists.txt  README.md  cmake_test.cpp
